--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,4 @@
 {% set version = '1.55' %}
-
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
 
@@ -10,40 +9,41 @@ package:
 source:
   fn: pamr_{{ version }}.tar.gz
   url:
-    - https://cran.r-project.org/src/contrib/pamr_{{ version }}.tar.gz
-    - https://cran.r-project.org/src/contrib/Archive/pamr/pamr_{{ version }}.tar.gz
-
+    - {{ cran_mirror }}/src/contrib/pamr_{{ version }}.tar.gz
+    - {{ cran_mirror }}/src/contrib/Archive/pamr/pamr_{{ version }}.tar.gz
   sha256: ed910194937a6097ec79234d84777856fd520b111a7c79f7c86dc607169cc3c3
 
 build:
   merge_build_host: True  # [win]
-  number: 1
+  number: 2
   skip: true  # [win32]
-
   rpaths:
     - lib/R/lib/
     - lib/
 
 requirements:
   build:
-    - posix                # [win]
-    - {{ compiler('fortran') }}        # [unix]
-    - {{ compiler('m2w64_fortran') }}  # [win]
-    - {{ compiler('c') }}        # [unix]
-    - {{ compiler('m2w64_c') }}  # [win]
+    - {{ compiler('c') }}        # [not win]
+    - {{ compiler('fortran') }}  # [not win]
+    - {{native}}toolchain        # [win]
+    - {{posix}}filesystem        # [win]
+    - {{posix}}make
+    - {{posix}}sed               # [win]
+    - {{posix}}coreutils         # [win]
+    - {{posix}}zip               # [win]
   host:
     - r-base
     - r-cluster
     - r-survival
-
   run:
     - r-base
+    - {{native}}gcc-libs         # [win]
     - r-cluster
     - r-survival
 
 test:
   commands:
-    - $R -e "library('pamr')"  # [not win]
+    - $R -e "library('pamr')"           # [not win]
     - "\"%R%\" -e \"library('pamr')\""  # [win]
 
 about:
@@ -53,8 +53,9 @@ about:
   license_family: GPL2
   license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-2'  # [unix]
   license_file: '{{ environ["PREFIX"] }}\R\share\licenses\GPL-2'  # [win]
+
 extra:
-   recipe-maintainers:
+  recipe-maintainers:
     - MathiasHaudgaard
     - FrodePedersen
     - ArneKr
@@ -62,3 +63,5 @@ extra:
     - bgruening
     - daler
     - jdblischak
+    - cbrueffer
+    - dbast
