--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "1.56" %}
+{% set version = '1.56.1' %}
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
 
@@ -7,25 +7,24 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: pamr_{{ version }}.tar.gz
   url:
     - {{ cran_mirror }}/src/contrib/pamr_{{ version }}.tar.gz
     - {{ cran_mirror }}/src/contrib/Archive/pamr/pamr_{{ version }}.tar.gz
-  sha256: c124e7db2eb9aa861acb88d8e3e04b89a811523fabe91b2c95d21c3e5da9010e
+  sha256: d0e527f2336ee4beee91eefb2a8f0dfa96413d9b5a5841d6fc7ff821e67c9779
 
 build:
   merge_build_host: True  # [win]
   number: 0
-  skip: true  # [win32]
   rpaths:
     - lib/R/lib/
     - lib/
 
 requirements:
   build:
-    - {{ compiler('c') }}        # [not win]
-    - {{ compiler('fortran') }}  # [not win]
-    - {{native}}toolchain        # [win]
+    - {{ compiler('c') }}              # [not win]
+    - {{ compiler('m2w64_c') }}        # [win]
+    - {{ compiler('fortran') }}        # [not win]
+    - {{ compiler('m2w64_fortran') }}  # [win]
     - {{posix}}filesystem        # [win]
     - {{posix}}make
     - {{posix}}sed               # [win]
@@ -49,7 +48,7 @@ test:
 about:
   home: https://CRAN.R-project.org/package=pamr
   license: GPL-2
-  summary: Some functions for sample classification in microarrays
+  summary: Some functions for sample classification in microarrays.
   license_family: GPL2
   license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-2'
 
@@ -58,9 +57,17 @@ extra:
     - MathiasHaudgaard
     - FrodePedersen
     - ArneKr
-    - johanneskoester
-    - bgruening
-    - daler
-    - jdblischak
-    - cbrueffer
-    - dbast
+    - conda-forge/r
+
+# Package: pamr
+# Title: Pam: Prediction Analysis for Microarrays
+# Version: 1.56.1
+# Author: T. Hastie, R. Tibshirani, Balasubramanian Narasimhan, Gil Chu
+# Description: Some functions for sample classification in microarrays.
+# Maintainer: Rob Tibshirani  <tibs@stanford.edu>
+# Depends: R (>= 2.10), cluster, survival
+# License: GPL-2
+# Packaged: 2019-04-21 11:21:24 UTC; ripley
+# Repository: CRAN
+# NeedsCompilation: yes
+# Date/Publication: 2019-04-22 06:58:41 UTC
